@@ -1,5 +1,7 @@
 2020-03-15  Allen D. Ball  <ball@hcf.dev>
 
+	* roles/centos, roles/nfs-exports: Initial writing.
+
 	* roles/auto.ebs/tasks/main.yml, roles/aws.rc/tasks/main.yml:
 	Install required packages.
 
